# mcp_course_ollama

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test_fundamentals.py  test_implementation.py
.kiro/specs/mcp-course-ollama/: design.md  requirements.md  tasks.md
docs/: api_reference.md  examples.md  faq.md  index.md  troubleshooting.md
docs/examples/: basic-mcp-client.md  basic-mcp-server.md  ollama-integration.md
docs/guides/: mcp-basics-guide.md  ollama-integration-guide.md
mcp_course/: __init__.py  cli.py
mcp_course/client/: __init__.py  basic.py  connection.py  conversation.py  demo.py  integration.py  integration_demo.py  prompts.py  test_integration.py  validate_integration.py
mcp_course/config/: __init__.py  settings.py
mcp_course/content/: __init__.py  loader.py  navigator.py
mcp_course/examples/: __init__.py  advanced_tools_example.py  analytics_server_example.py  basic_server_example.py  complete_server_example.py  data_server_example.py  minimalistic_mcp_server.py  multi_server_orchestration.py  ollama_integration_demo.py  processing_server_example.py  resources_server_example.py  secure_communication.py  security_patterns.py  server_template_generator.py
mcp_course/fundamentals/: __init__.py  concepts.py  diagrams.py  examples.py  interactive.py  main.py  protocol.py
mcp_course/models/: __init__.py  content.py  progress.py
mcp_course/modules/: __init__.py
mcp_course/ollama_client/: __init__.py  client.py  config.py  health.py  models.py  performance.py  setup.py
mcp_course/server/: __init__.py  basic.py  resources.py  scaffolding.py  tools.py  tutorial.py
mcp_course/storage/: __init__.py  progress_store.py
mcp_course/utils/: __init__.py  logging.py  progress_utils.py  validation.py
tests/: __init__.py  conftest.py  test_content_loader.py  test_implementation.py  test_models.py  test_navigator.py
